Sorgente/.apex/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Status_SS__c</fullName>
        <label>Status SS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aperto</fullName>
                </value>
                <value>
                    <fullName>Perso</fullName>
                </value>
                <value>
                    <fullName>Da affiliare o associare</fullName>
                </value>
                <value>
                    <fullName>Da riaffiliare</fullName>
                </value>
                <value>
                    <fullName>Da riassociare</fullName>
                </value>
                <value>
                    <fullName>Associato</fullName>
                </value>
                <value>
                    <fullName>Affiliato</fullName>
                </value>
                <value>
                    <fullName>Inattivo</fullName>
                </value>
                <value>
                    <fullName>Associato perso</fullName>
                </value>
                <value>
                    <fullName>Affiliato perso</fullName>
                </value>
                <value>
                    <fullName>IA prodotto</fullName>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Struttura_abilitata_ai_parti__c</fullName>
        <label>Struttura abilitata ai parti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                    <default>true</default>
                    <label>Da verificare</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Struttura_problematica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Struttura problematica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_secondario__c</fullName>
        <label>Telefono secondario</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_di_Origine__c</fullName>
        <label>Tipo di Origine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiratura__c</fullName>
        <label>Tiratura</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Titolare_Lead_del__c</fullName>
        <label>Titolare Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titolare_ginecologo_opport_correlat__c</fullName>
        <label>Titolare ginecologo opport. correlata</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Titolare_storico__c</fullName>
        <label>Titolare storico</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_univoco_account_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id univoco account 18</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Agenti_Tutt_i_miei_professional</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Professional</value>
        </filters>
        <label>R - Tutt i miei professional</label>
    </listViews>
    <listViews>
        <fullName>Contatti_da_Agenti_da_gestire</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>Business_Unit__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <filters>
            <field>Status_SS__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Ruolo_creatore__c</field>
            <operation>contains</operation>
            <value>kam</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>stesar,salcav,monlot,ancrip,ramtas,pbell,atrev,sarlar,marven,mmerc</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>dbge</value>
        </filters>
        <label>Contatti da Agenti da gestire</label>
        <sharedTo>
            <group>Gruppo_gestione_ufficio</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contatti_da_Agenti_gest_prev_IN_TEST</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Addetto_prevendita_correlato__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <filters>
            <field>Status_SS__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Ruolo_creatore__c</field>
            <operation>contains</operation>
            <value>kam</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Addetto_prevendita_correlato__c</field>
            <operation>contains</operation>
            <value>saraino,larocca,tassinari,lotta,cavaliere,hasa</value>
        </filters>
        <label>Contatti da Agenti gestione prevendita</label>
        <sharedTo>
            <group>Gruppo_gestione_ufficio</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Prospect_che_richiedono_la_guida_cartace</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Richiesta_guida__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STREET</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_ZIP</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_CITY</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Richiesta_spedita__pc</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Prospect che richiedono la guida cartace</label>
        <sharedTo>
            <group>Carmen</group>
            <group>Coordinatore_BU</group>
            <role>Responsabile_Postvendita</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_AG</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>agall</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Gallè</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Gallè</value>
        </filters>
        <label>R - I miei contratti - GALLè</label>
        <sharedTo>
            <group>Gall</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_AZ</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>andrea.z</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Zuccheri</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Zuccheri</value>
        </filters>
        <label>R- I miei contratti - ZUCCHERI</label>
        <sharedTo>
            <group>Zuccheri</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_BIASE</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>ldib</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Biase</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Biase</value>
        </filters>
        <label>R - I miei contratti - DI BIASE</label>
        <sharedTo>
            <group>di_Biase</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_DB</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dbarb</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Barbera</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Barbera</value>
        </filters>
        <label>R - I miei contratti - BARBERA</label>
        <sharedTo>
            <group>Barbera</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_Dilizio</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rdili</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Dilizio</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Dilizio</value>
        </filters>
        <label>R - I miei contratti - Dilizio</label>
        <sharedTo>
            <group>Dilizio</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_FB_1</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>fborr</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Borruso</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Borruso</value>
        </filters>
        <label>R - I miei contratti - BORRUSO</label>
        <sharedTo>
            <group>Borruso</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_FF</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>ffert</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Fertitta</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Fertitta</value>
        </filters>
        <label>R - I miei contratti - FERTITTA</label>
        <sharedTo>
            <group>Fertitta</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_FL</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>federica</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>LEONARDI</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>LEONARDI</value>
        </filters>
        <label>R - I miei contratti - LEONARDI</label>
        <sharedTo>
            <group>Leonardi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_FP</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>palm</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Palmieri</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Palmieri</value>
        </filters>
        <label>R - I miei contratti - PALMIERI</label>
        <sharedTo>
            <group>Palmieri</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_FR</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>1/15/2018</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>froma</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>ROMANELLI</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>ROMANELLI</value>
        </filters>
        <label>R - I miei contratti - ROMANELLI</label>
        <sharedTo>
            <group>Romanelli</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>R_I_miei_contratti_Federici</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Agente_che_fa_appuntamento__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Origine__c</columns>
        <columns>Dettaglio_origine_aperto__c</columns>
        <columns>Dettaglio_professional__c</columns>
        <columns>PC_LEAD_SOURCE</columns>
        <columns>Status_SS__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Data_firma_contratto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_firma_contratto__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2017</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>lfede</value>
        </filters>
        <filters>
            <field>Titolare_ginecologo_opport_correlat__c</field>
            <operation>contains</operation>
            <value>Federici</value>
        </filters>
        <filters>
            <field>Agente_che_fa_appuntamento__c</field>
            <operation>contains</operation>
            <value>Federici</value>
        </filters>
        <label>R - I miei contratti - FEDERICI</label>
        <sharedTo>
            <group>Federici</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Professional</fullName>
        <active>true</active>
        <label>Professional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Altro</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Campo_Origine_account_prospect_cliente</fullName>
        <active>true</active>
        <description>Campo &quot;Origine&quot; account prospect cliente</description>
        <errorConditionFormula>RecordType.DeveloperName  = &quot;PersonAccount&quot;
 &amp;&amp; 
NOT (  ISNEW() )
 &amp;&amp; 
 ISCHANGED( Origine__c )
 &amp;&amp; 
 $Profile.Name  &lt;&gt; &quot;Amministratore del sistema&quot;
 &amp;&amp; 
$Profile.Name  &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>Per modificare il campo Origine, contattare l&apos;amministratore del sistema.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_origine_professional_su_Accoun</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Origine__c,&quot;Professional&quot;),ISBLANK(Dettaglio_professional__c),  RecordType.Name =&apos;Prospect/cliente&apos;),NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio_professional__c</errorDisplayField>
        <errorMessage>Compila il campo &quot;Dettaglio origine professional&quot; o indica &quot;dettaglio origine sconosciuto&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_su_prodotto</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Business_Unit__c ,&quot;SG&quot;), NOT(OR(ISPICKVAL( Prodotto__c,&quot;Aurora&quot;),ISPICKVAL( Prodotto__c,&quot;BRCA&quot;),ISPICKVAL( Prodotto__c,&quot;Trombofilia&quot;), ISPICKVAL( Prodotto__c,&quot;Glaucoma&quot;), ISPICKVAL( Prodotto__c,&quot;Screening neonatale&quot;),ISPICKVAL( Prodotto__c,&quot;Celiachia&quot;),ISPICKVAL( Prodotto__c,&quot;Salute completa&quot;),ISPICKVAL( Prodotto__c,&quot;Dieta +&quot;))),FALSE)</errorConditionFormula>
        <errorDisplayField>Prodotto__c</errorDisplayField>
        <errorMessage>Per Sorgente Genetica devi compilare il prodotto a cui è interessato.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Origine_necessita_dettaglio_aperto</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(OR(ISPICKVAL(Origine__c,&quot;Corso Preparto&quot;),ISPICKVAL(Origine__c,&quot;Pieghevole&quot;),ISPICKVAL(Origine__c,&quot;Altro&quot;)),ISBLANK(  Dettaglio_origine_aperto__c  )),NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio_origine_aperto__c</errorDisplayField>
        <errorMessage>Compila il campo &quot;Dettaglio origine aperto&quot; o indica &quot;dettaglio origine sconosciuto&quot; nell&apos;Account dell&apos;opportunità</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Origine_programma_amico</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Origine__c,&quot;Programma Amico&quot;),ISBLANK( Referente_programma_amico__c )),NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Referente_programma_amico__c</errorDisplayField>
        <errorMessage>Specifica il programma amico o seleziona la casella &quot;dettaglio origine sconosciuto&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Origine_specialista_necessita_dettaglio</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISPICKVAL(Origine__c,&quot;Specialista&quot;),ISBLANK( Dettaglio_origine__c ),(RecordType.Name =&apos;Prospect/cliente&apos;  )),NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio_origine__c</errorDisplayField>
        <errorMessage>Compila il campo &quot;Dettaglio origine&quot; o indica &quot;dettaglio origine sconosciuto&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prova_SFDC_Inibire_modifica_a_account_pr</fullName>
        <active>true</active>
        <description>caso 17295363 - Inibire modifica a account prospect clienti a utenti force.com - KAM.</description>
        <errorConditionFormula>RecordType.DeveloperName  = &quot;PersonAccount&quot;

 &amp;&amp; 

 $Profile.Name  = &quot;Force.com - App Subscription User (KAM)&quot;

 &amp;&amp; 

 $User.Id  &lt;&gt;  Owner.Id</errorConditionFormula>
        <errorMessage>Puoi modificare l&apos;account prospect/client solamente se sei anche il titolare dell&apos;account prospect/client.</errorMessage>
    </validationRules>
</CustomObject>